Created more models in backend (#37)
* Installed graphql, apollo, express-server and initialized server app.ts page

* Connected to localhost:4000/graphql, now attemtping to connect front end to graphql sever

* Created fetch route on handlesubmit to retreive graphql server user data, still testing

* Fixing package lock for graphql set up push`

* Successfully connected frontend to graphql

* Created currentUser & error states for future purposes. Currently the axios request is not handling errors properly due to how the the error is thrown on server side- need to fix this eventually

* Completely set up login authentication, cookie session, and hashrouter for refreshes

* Commenting out import due to ESLint error, but currently not important

* Commenting out import file ESLint error

* Disabling some unnecessary eslint errors

* Updated package lock

* Removing h1 tag

* Created Sign up page, styled it to match Login page, has links to login page, functionality 40% complete

* Minor changes to Sing up styling

* Implemented simple validation functions and subsequent error messaging on front end

* Added simple input validaiton for phone number + error messaging front end

* Created password checker modal for sign up page (validates & shows checklist completion on typing-

* styling for password checker modal

* Created additional information page (transition page between sign up and home page - not accessible through other means) styled but not functional yet

* Fixing merge conflicts

* Styled Header & navbar to match mock up

* Connected routes for home/overview when successfuly logged in and also log out paths

* Created and styled profile page and forms in settings - not functional yet

* Added button functionality to the tabs and created the Accounts page.

* Created notifcations page and settings page + styling. Notifications page still needs mobile styling

* Fixing width on header

* Fixed spacing and fo

--- a/public/assets/Styles/02.Signup/additional-info/additionalInfo.scss
+++ b/public/assets/Styles/02.Signup/additional-info/additionalInfo.scss
@@ -15,6 +15,10 @@ $phone: 450px;
   width: 100%;
   height: 100vh;
   background-color: white;
+  @media screen and (max-width: 3800px) {
+    padding-top: 5em;
+    justify-content: flex-start;
+  }
   @media screen and (max-width: 600px) {
     justify-content: flex-start;
     background-color: #d1e0de;
@@ -181,7 +185,7 @@ $phone: 450px;
       font-weight: lighter;
     }
     &::-webkit-datetime-edit-month-field {
-       color: rgb(156, 156, 156);
+      color: rgb(156, 156, 156);
     }
     &::-webkit-datetime-edit-day-field {
       color: rgb(156, 156, 156);
@@ -236,7 +240,6 @@ $phone: 450px;
       color: rgb(156, 156, 156);
       font-weight: lighter;
     }
-
   }
 
   .input-container {
@@ -298,6 +301,7 @@ $phone: 450px;
     font-weight: lighter;
     background-color: #20b2aa;
     color: white;
+    letter-spacing: 1px;
     border: none;
     margin-top: 20px;
     margin-bottom: 5px;
@@ -311,5 +315,42 @@ $phone: 450px;
       background-color: #1c9993;
     }
   }
+}
 
+.connect-plaid-div {
+  @include flexCenter(row);
+  justify-content: center;
+  width: 100%;
+
+  .connect-bank-btn {
+    width: 60%;
+    height: 45px;
+    color: white;
+    background-color: rgb(55, 104, 110);
+    border: none;
+    font-size: 1.1em;
+    transition: 0.1s ease-in;
+    letter-spacing: 1px;
+    &:hover {
+      background-color: #1c9993;
+    }
+  }
+
+  .connect-bank-success {
+    @include flexCenter(row);
+    justify-content: center;
+    width: 60%;
+    height: 45px;
+    color: white;
+    text-align: center;
+    background-color: rgb(42, 163, 143);
+    border: none;
+    border-radius: 15px;
+    font-size: 1.1em;
+    letter-spacing: 1px;
+    .success-message {
+      font-size: 1.1em;
+      font-weight: bold;
+    }
+  }
 }
