rendered list and status bar

--- a/public/assets/Styles/06.Goals/Goals.css
+++ b/public/assets/Styles/06.Goals/Goals.css
@@ -1,3 +1,58 @@
+.a-goal {
+  height: 100px;
+  width: 85%;
+  border: 1px solid #696969;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.a-goal .name-bar {
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.a-goal .name-bar .status-bar-back {
+  height: 20px;
+  width: 90%;
+  background-color: #696969;
+  border-radius: 10px;
+}
+
+.a-goal .name-bar .status-bar-back .status-bar {
+  height: 100%;
+  border-radius: 10px;
+}
+
+.a-goal .icons-edit-delete {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .goals-page {
   background-color: #ffffff;
   font-family: 'Roboto';
