--- a/public/assets/Styles/03.Login/Login.scss
+++ b/public/assets/Styles/03.Login/Login.scss
@@ -245,3 +245,26 @@ $phone: 450px;
   text-align: center;
   color: #5d5d5d;
 }
+
+
+.login-error-div {
+  @include flexCenter(row);
+  justify-content: flex-start;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: auto;
+  height: auto;
+  padding: 1em;
+  background-color: rgb(235, 102, 102);
+  .login-error-message {
+    font-size: 1.1em;
+    color: rgb(237, 237, 237);
+    text-align: center;
+  }
+  .alert-icon {
+    font-size: 1.5em;
+    margin-right: 0.5em;
+    color: white;
+  }
+}
