added modal and new input

--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -598,6 +598,74 @@
   height: 22px;
 }
 
+.signup-credentials-div .loader {
+  color: #ffffff;
+  font-size: 11px;
+  text-indent: -99999em;
+  margin: 55px auto;
+  position: relative;
+  width: 10em;
+  height: 10em;
+  -webkit-box-shadow: inset 0 0 0 1em;
+          box-shadow: inset 0 0 0 1em;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.signup-credentials-div .loader:before,
+.signup-credentials-div .loader:after {
+  position: absolute;
+  content: "";
+}
+
+.signup-credentials-div .loader:before {
+  width: 5.2em;
+  height: 10.2em;
+  background: #0dc5c1;
+  border-radius: 10.2em 0 0 10.2em;
+  top: -0.1em;
+  left: -0.1em;
+  -webkit-transform-origin: 5.1em 5.1em;
+  transform-origin: 5.1em 5.1em;
+  -webkit-animation: load2 2s infinite ease 1.5s;
+  animation: load2 2s infinite ease 1.5s;
+}
+
+.signup-credentials-div .loader:after {
+  width: 5.2em;
+  height: 10.2em;
+  background: #0dc5c1;
+  border-radius: 0 10.2em 10.2em 0;
+  top: -0.1em;
+  left: 4.9em;
+  -webkit-transform-origin: 0.1em 5.1em;
+  transform-origin: 0.1em 5.1em;
+  -webkit-animation: load2 2s infinite ease;
+  animation: load2 2s infinite ease;
+}
+
+@-webkit-keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes load2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 .signup-credentials-div .signin-signup-btn {
   width: 75%;
   padding: 12px;
@@ -727,10 +795,10 @@
   font-size: 20px;
   outline: none;
   color: #5d5d5d;
-  -webkit-transition: border-color ease .25s, -webkit-box-shadow ease .25s;
-  transition: border-color ease .25s, -webkit-box-shadow ease .25s;
-  transition: box-shadow ease .25s, border-color ease .25s;
-  transition: box-shadow ease .25s, border-color ease .25s, -webkit-box-shadow ease .25s;
+  -webkit-transition: border-color ease 0.25s, -webkit-box-shadow ease 0.25s;
+  transition: border-color ease 0.25s, -webkit-box-shadow ease 0.25s;
+  transition: box-shadow ease 0.25s, border-color ease 0.25s;
+  transition: box-shadow ease 0.25s, border-color ease 0.25s, -webkit-box-shadow ease 0.25s;
 }
 
 .react-tel-input .form-control:hover {
@@ -757,7 +825,7 @@
 }
 
 .react-tel-input .form-control.invalid-number + div:before {
-  content: 'Error';
+  content: "Error";
   display: none;
   color: #f44336;
   width: 27px;
@@ -781,7 +849,7 @@
 
 .react-tel-input input[disabled] + .flag-dropdown:hover {
   cursor: default;
-  border-color: #CACACA;
+  border-color: #cacaca;
 }
 
 .react-tel-input input[disabled] + .flag-dropdown:hover .selected-flag {
@@ -913,7 +981,7 @@
 
 .react-tel-input .country-list .no-entries-message {
   padding: 7px 10px 11px;
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .react-tel-input .invalid-number-message {
@@ -1071,6 +1139,24 @@
 @media screen and (max-width: 3800px) {
   .additional-info-container {
     padding-top: 5em;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 2800px) {
+  .additional-info-container {
+    padding-top: 4em;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  .additional-info-container {
+    padding-top: 3em;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -2046,6 +2132,45 @@
   font-size: 13px;
   text-align: center;
   color: #5d5d5d;
+}
+
+.login-error-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: auto;
+  height: auto;
+  padding: 1em;
+  background-color: #eb6666;
+}
+
+.login-error-div .login-error-message {
+  font-size: 1.1em;
+  color: #ededed;
+  text-align: center;
+}
+
+.login-error-div .alert-icon {
+  font-size: 1.5em;
+  margin-right: 0.5em;
+  color: white;
 }
 
 .header {
@@ -3516,6 +3641,62 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.goal-modal .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.goal-modal .modal-main {
+  position: fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.goal-modal .display-block {
+  display: block;
+}
+
+.goal-modal .display-none {
+  display: none;
+}
+
+.edit-goal .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.edit-goal .modal-main {
+  position: fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.edit-goal .display-block {
+  display: block;
+}
+
+.edit-goal .display-none {
+  display: none;
 }
 
 .goals-page {
