--- a/public/assets/Styles/06.Goals/Goals.scss
+++ b/public/assets/Styles/06.Goals/Goals.scss
@@ -1,4 +1,6 @@
 @import './GoalsList/GoalsList';
+@import './AddGoalModal/AddGoalModal';
+@import './EditGoalModal/EditGoalModal';
 
 .goals-page {
   background-color: #ffffff;
