--- a/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
+++ b/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
@@ -14,7 +14,8 @@
     .status-bar-back {
       height:20px;
       width: 90%;
-      background-color: #696969;
+      background-color: white;
+      border: 1px solid #696969;
       border-radius: 10px;
       .status-bar {
         height: 100%;
