--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -6,6 +6,7 @@
 @import "../SharedComponents/01.Header/Header.scss";
 @import "../SharedComponents/03.Footer/Footer.scss";
 @import "../SharedComponents/02.Navbar/Navbar.scss";
+@import "../05.Overview/Overview.scss";
 @import "../04.Settings/Settings.scss";
 @import "../04.Settings/Profile/Profile.scss";
 @import "../04.Settings/YourAccount/YourAccount.scss";
