--- a/public/assets/Styles/06.Goals/Goals.css
+++ b/public/assets/Styles/06.Goals/Goals.css
@@ -31,7 +31,8 @@
 .a-goal .name-bar .status-bar-back {
   height: 20px;
   width: 90%;
-  background-color: #696969;
+  background-color: white;
+  border: 1px solid #696969;
   border-radius: 10px;
 }
 
@@ -78,34 +79,6 @@
 }
 
 .goal-modal .display-none {
-  display: none;
-}
-
-.edit-goal .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-
-.edit-goal .modal-main {
-  position: fixed;
-  background: white;
-  width: 80%;
-  height: auto;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.edit-goal .display-block {
-  display: block;
-}
-
-.edit-goal .display-none {
   display: none;
 }
 
