Savings Goal Page  (#41)
* added airbnb style

* linting

* added typescript to linter

* tsc init

* tried to fix linter errors

* please work

* successful hunting bugs

* trying typescript

* can render to the page

* about us page

* scss attempt

* styled footer and about us kind of

* fixed comments

* now passing all pre tests

* changed version number

* styles rewatched

* changed color of font and size of font for footer

* changed to hosted image in header

* some progress on sign up box

* sign up box

* css added to tools offered

* fixed boreder box issue

* home page scssed

* addded some css to header

* added CSS tools we offer

* removed this is homepage message

* added reviewe suggestions

* added screen responsivness to home page and removed credit part

* scss progress

* rendered list and status bar

* Some progress on the page

* added modal and new input

* minor changes

* Added some mutations

* reconfigured components to new folder

* can update amount

* can edit a goal completely

* auto refresh on submit

* pulled upstream

* something with the login

* fully functional goals page

* i really dont know

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -12,6 +12,7 @@
 @import "../04.Settings/YourAccount/YourAccount.scss";
 @import "../04.Settings/Notifications/Notifications.scss";
 @import "../04.Settings/UserSettings/UserSettings.scss";
+@import "../06.Goals/Goals.scss";
 
 body,
 html {
