Added styling and some functionality to goals (#43)
* Added login html elements

* Completed styling for login page

* Added styling for login page

* Changed single quotes to double quotes

* Styling changes to accomodate for various computer screen sizes

* Changed classnames to hyphenated names

* Changed camel case to hyphenated classnames

* Moved login page outside of div with navbar

* Changed camel-case

* Changed some camelcase to hyphencase

* Working on mobile for login

* Merge conflict fix

* Conflict changes

* Added mobile styling to login page

* Removed extra space

* Added new validation file for login, temporarily validates using dummy data

* Removed validation for email

* Added initial Budget Breakdown page with some styling

* Added Add tab with input fields

* Able to extract data from all input fields and remove any entry

* Added dollar signs before money string

* Show newly added budget in tabs

* Added validation to check whether income is a number

* Removed ID from data object, switch tabs upon adding budget

* Styling changes to buttons

* Changed styling for better mobile compatibility

* Marginchange for whole container

* Added ability to sort by price or alphabetical

* Added two more sorting options

* Added ability to modify active budget

* Budget breakdown modified to show only one budget with new graphql query

* Updated button styling and options

* Fixed styling for buttons and mobile

* Added axios requests to get and post budgets

* Now able to post budget and retrieve budget with hardcoded objectID

* Added useEffect to get temp objectID and save to state

* Allow add row when editing existing budget

* Changed amount to value

* Changed the word amount to value

* Changed back to amount

* Added recharts and add budget component

* Changed the key amount to value on frontend and backend

* Created new components to break down budget brea

--- a/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
+++ b/public/assets/Styles/06.Goals/GoalsList/GoalsList.scss
@@ -1,22 +1,25 @@
 .a-goal {
   height: 100px;
-  width: 85%;
-  border: 1px solid #696969;
+  width: 97%;
+  box-shadow: 0px 4px 10px -1px rgba(169, 169, 169, 0.75);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
   .name-bar {
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    // align-items: center;
     justify-content: space-evenly;
     .status-bar-back {
-      height:20px;
+      height: 20px;
       width: 90%;
       background-color: white;
       border: 1px solid #696969;
       border-radius: 10px;
+      overflow: hidden;
       .status-bar {
         height: 100%;
         border-radius: 10px;
