--- a/public/assets/Styles/06.Goals/AddGoalModal/AddGoalModal.scss
+++ b/public/assets/Styles/06.Goals/AddGoalModal/AddGoalModal.scss
@@ -3,19 +3,87 @@
     position: fixed;
     top: 0;
     left: 0;
-    width:100%;
+  }
+
+  .goal-modal-background {
+    width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
   }
 
   .modal-main {
-    position:fixed;
+    position: fixed;
     background: white;
-    width: 80%;
+    width: 50%;
     height: auto;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    z-index: 2;
+    .goal-input-group {
+      align-items: flex-start;
+      // margin: 0 20px 20px 0;
+      margin-bottom: 20px;
+      flex-wrap: nowrap;
+      font-size: 20px;
+      .goal-top {
+        margin-top: 40px;
+      }
+      .goal-input-title {
+        font-size: 25px;
+        margin-bottom: 0px;
+        color: black;
+      }
+      .goal-input-box {
+        display: flex;
+        align-items: center;
+        max-width: 300px;
+        background: #fff;
+        border: 1px solid #a0a0a0;
+        border-radius: 4px;
+        padding-left: 0.35rem;
+        overflow: hidden;
+        font-family: sans-serif;
+        &:focus-within {
+          border-color: #777;
+        }
+      }
+      .goal-input-box-desc {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        background: #fff;
+        border: 1px solid #a0a0a0;
+        border-radius: 4px;
+        padding-left: 0.35rem;
+        overflow: hidden;
+        font-family: sans-serif;
+        overflow-wrap: break-word;
+        &:focus-within {
+          border-color: #777;
+        }
+      }
+      .goal-prefix {
+        font-weight: 300;
+        font-size: 20px;
+        color: #999;
+      }
+      .goal-input-field {
+        flex-grow: 1;
+        font-size: 20px;
+        background: #fff;
+        border: none;
+        outline: none;
+        padding: 0.5rem;
+        resize: both;
+        overflow-wrap: break-word;
+      }
+    }
+  }
+
+  .modal-main h3 {
+    margin-bottom: 20px;
   }
 
   .display-block {
