--- a/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
+++ b/public/assets/Styles/01.Homepage/ToolsOffered/ToolsOffered.scss
@@ -1,43 +1,106 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-.tools-offered {
-  background-color: #ffffff;
-  font-family: 'Roboto';
+@mixin flexCenter($direction) {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+  flex-direction: $direction;
+  font-family: "Avenir";
+ }
+
+ // https://bgjar.com/animated-shape
+
+ .tool-outter-container {
+  @include flexCenter(column);
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 1300px;
-  margin-top: 40px;
-  .tools {
-    float: left;
-    width: 45%;
-    margin-left: 5%;
-    color: #696969;
-    border-bottom: solid #696969 3px;
-  }
-  .tool-slot {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 300px;
+  height: 600px;
+  margin: 110px 0 20px;
+
+  .tool-header-div {
+    @include flexCenter(row);
     width: 100%;
+    height: 70px;
+    .tool-header-title {
+      font-size: 2em;
+      color: rgb(89, 89, 89);
+      margin-right: 1em;
+    }
+    .tool-icon {
+      font-size: 2.1em;
+      color: rgb(121, 181, 170);
+    }
   }
-  .example-image {
-    height: 250px;
-    width: 50%;
+
+  .tools-offered {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 15px;
+    grid-row-gap: 0px;
+    width: 95%;
+    height: 60%;
+    font-family: "Roboto";
+    overflow-x: hidden;
+
+    @media screen and (max-width: 950px) {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 1fr;
+      grid-column-gap: 15px;
+      grid-row-gap: 20px;
+      margin-top: 1em;
+    }
+
+    .tool-section {
+      @include flexCenter(column);
+      justify-content: center;
+      height: 70%;
+      width: 90%;
+      padding: 1em;
+
+      @media screen and (max-width: 950px) {
+        justify-self: center;
+        width: 75%;
+        height: auto;
+      }
+
+
+      .tool-text-container {
+        @include flexCenter(column);
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 80%;
+        border-radius: 10px;
+        transition: 0.5s ease;
+        padding: 0.6em;
+        &:hover {
+          box-shadow: 0px 3px 10px 0px rgba(135, 135, 135, 0.75);
+          outline: 1px solid  rgb(144, 213, 200);
+        }
+        .tool-title {
+          width: 100%;
+          text-align: center;
+          font-size: 1.5em;
+          font-weight: bold;
+          padding: 0.3em;
+          color: rgb(121, 181, 170);
+        }
+        .tool-paragraph {
+          padding: 0.8em;
+          line-height: 1.9em;
+          height: 80%;
+          width: 100%;
+          text-align: center;
+          margin: 0;
+        }
+      }
+    }
   }
-  .about-tool {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-    color: #696969;
-    font-size: 1em;
-    width: 50%;
-    height: 250px;
-  }
-}
+ }
+
+ img.tool-image {
+  height: 200px;
+  width: 370px;
+  border: 1px solid rgb(148, 148, 148);
+ }
