--- a/public/assets/Styles/06.Goals/Goals.scss
+++ b/public/assets/Styles/06.Goals/Goals.scss
@@ -32,6 +32,7 @@
       width: 95%;
     }
     @media screen and (max-width: 1000px) {
+      width: 95%;
       flex-direction: column;
     }
     .goals-list {
@@ -42,7 +43,7 @@
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       padding: 20px;
       @media screen and (max-width: 1000px) {
-        width: 100%;
+        width: 96%;
         margin-bottom: 30px;
       }
       .goals-main {
@@ -54,7 +55,7 @@
           flex-direction: row;
           justify-content: space-between;
           .goals-div-title {
-            color: black;
+            color:rgb(97, 97, 97);
             font-size: 30px;
             font-weight: bold;
             margin-bottom: 10px;
@@ -76,7 +77,7 @@
     }
   }
   .goals-analytics {
-    width: 60%;
+    width: 56%;
     @media screen and (max-width: 1000px) {
       width: 100%;
     }
@@ -91,7 +92,7 @@
       margin-bottom: 20px;
       font-size: 30px;
       // font-weight: bold;
-      color: black;
+      color:rgb(97, 97, 97);;
     }
     .icon-style {
       display: flex;
@@ -114,7 +115,7 @@
       width: 40%;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       @media screen and (max-width: 700px) {
-        width: 100%;
+        width: 80%;
       }
     }
     .forecast {
@@ -122,7 +123,7 @@
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       padding: 30px;
       @media screen and (max-width: 700px) {
-        width: 100%;
+        width: 80%;
       }
     }
     .forecast div {
@@ -140,7 +141,7 @@
       .goal-input-title {
         font-size: 25px;
         margin-bottom: 0px;
-        color: black;
+        color:rgb(97, 97, 97);;
       }
       .goal-input-box {
         display: flex;
