--- a/public/assets/Styles/SharedComponents/02.Navbar/Navbar.scss
+++ b/public/assets/Styles/SharedComponents/02.Navbar/Navbar.scss
@@ -9,12 +9,12 @@
 
 .navbar-container-div {
   @include flexCenter(column);
+  width: 100%;
+  height: 60px;
+  // padding: 1em;
+  margin-bottom: 10px;
   background-color: #a5dfdc;
   box-shadow: 0px 9px 5px -4px rgb(209, 209, 209);
-  width: 100vw;
-  height: 60px;
-  padding: 1em;
-  margin-bottom: 15px;
   @media screen and (max-width: 550px) {
     width: 100%;
     height: 80px;
@@ -28,6 +28,7 @@
     width: 70%;
     height: 50px;
     line-height: 1em;
+    padding: 1em;
     // border: 1px solid red;
     @media screen and (max-width: 900px) {
       width: 75%;
@@ -53,11 +54,17 @@
     text-decoration: none;
     color: #5d5d5d;
     transition: 0.1s ease-in;
+    &:hover {
+      color: #3d3d3d;
+      font-weight: bold;
+      font-size: 1.25em;
+    }
     @media screen and (max-width: 900px) {
       font-size: 1.1em;
       &:hover {
         color: #3d3d3d;
         font-weight: bold;
+        font-size: 1.1em;
       }
     }
     @media screen and (max-width: 550px) {
@@ -66,11 +73,8 @@
       color: #3d3d3d;
       font-weight: bold;
       margin-bottom: 5px;
+      font-size: 1em;
     }
-    }
-    &:hover {
-      color: #3d3d3d;
-      font-weight: bold;
     }
   }
 
