--- a/public/assets/Styles/06.Goals/Goals.scss
+++ b/public/assets/Styles/06.Goals/Goals.scss
@@ -41,10 +41,12 @@
       justify-content: space-between;
       width: 37%;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-      padding: 20px;
       @media screen and (max-width: 1000px) {
-        width: 96%;
+        width: 100%;
         margin-bottom: 30px;
+      }
+      .goals-list-inner {
+        margin: 20px;
       }
       .goals-main {
         display: flex;
@@ -55,12 +57,15 @@
           flex-direction: row;
           justify-content: space-between;
           .goals-div-title {
-            color:rgb(97, 97, 97);
+            color: rgb(97, 97, 97);
             font-size: 30px;
             font-weight: bold;
             margin-bottom: 10px;
           }
         }
+      }
+      .goals-list-container {
+        width: 100%;
       }
       .add-new {
         margin-top: 10px;
@@ -77,7 +82,7 @@
     }
   }
   .goals-analytics {
-    width: 56%;
+    width: 60%;
     @media screen and (max-width: 1000px) {
       width: 100%;
     }
@@ -92,7 +97,7 @@
       margin-bottom: 20px;
       font-size: 30px;
       // font-weight: bold;
-      color:rgb(97, 97, 97);;
+      color: rgb(97, 97, 97);
     }
     .icon-style {
       display: flex;
@@ -115,15 +120,17 @@
       width: 40%;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       @media screen and (max-width: 700px) {
-        width: 80%;
+        width: 100%;
       }
     }
     .forecast {
       width: 60%;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-      padding: 30px;
       @media screen and (max-width: 700px) {
-        width: 80%;
+        width: 100%;
+      }
+      .forecast-inner {
+        margin: 30px;
       }
     }
     .forecast div {
@@ -141,7 +148,7 @@
       .goal-input-title {
         font-size: 25px;
         margin-bottom: 0px;
-        color:rgb(97, 97, 97);;
+        color: rgb(97, 97, 97);
       }
       .goal-input-box {
         display: flex;
