--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -21,7 +21,7 @@
   @include center(row);
   align-items: flex-start;
   width: 100vw;
-  margin: 30px 0 30px;
+  margin: 50px 0 50px;
   font-family: "Avenir";
 }
 
@@ -34,7 +34,7 @@
   @media screen and (max-width: 1600px) {
     width: 95%;
   }
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1200px) {
     flex-direction: column;
   }
 }
@@ -42,49 +42,16 @@
 .bb-left {
   width: 55%;
   height: 100%;
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1200px) {
     width: 100%;
     margin-bottom: 20px;
-  }
-  .bb-tabs {
-    @include center(row);
-    justify-content: flex-start;
-    width: 100%;
-    position: relative;
-    top: -1px;
-
-    .bb-tab {
-      @include center(row);
-      justify-content: flex-start;
-      width: 90px;
-      padding: 10px;
-      border: none;
-      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
-      outline: none;
-      cursor: pointer;
-      &:hover {
-        background-color: rgb(201, 201, 201);
-      }
-    }
-    .bb-active-tab {
-      font-weight: bold;
-      background-color: #80e3dc;
-      &:hover {
-        background-color: #80e3dc;
-      }
-    }
   }
   .bb-budget-box {
     @include center(column);
     justify-content: flex-start;
     width: 100%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    padding: 20px;
-    .bb-budget-div {
-      width: 100%;
-    }
+    // padding: 20px;
     .bb-budget-top {
       @include center(row);
       align-items: flex-start;
@@ -187,7 +154,7 @@
       }
       .bb-budget-total-title {
         font-weight: bold;
-        color:rgb(97, 97, 97);
+        color: rgb(97, 97, 97);
       }
     }
   }
@@ -225,6 +192,12 @@
   &:hover {
     background-color: #45b9b2;
   }
+}
+
+.bb-budget-div {
+  width: 95%;
+  padding-bottom: 30px;
+  // margin: 20px;
 }
 
 .bb-add-input-group {
@@ -331,18 +304,18 @@
     font-size: 30px;
   }
   .bb-chart-new {
-    position: absolute;
-    top: 100px;
+    margin-top: 100px;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 27px;
     padding: 20px;
     border-radius: 15px;
     background-color: rgb(53, 170, 164);
     color: rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: default;
+    text-align: center;
   }
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1200px) {
     width: 100%;
     height: 600px;
   }
